Tue Aug 30 22:25:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* vm_insnhelper.c (vm_call_cfunc): revert r33112.  RB_GC_GUARD macro
	  protect a VALUE from GC.  It's not for general anti-optimizing
	  purpose.

Tue Aug 30 11:06:19 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem 1.5.4+ (2149f4185c598fb97db1).
	  [Bug #5173] [ruby-core:38866]

Tue Aug 30 09:57:50 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/thread.rb (Queue#pop): fix a race against Thread.wakeup.
	  Patch by Masaki Matsushita <glass.saga at gmail dot com>
	  [Bug #5195] [ruby-dev:44400]

Tue Aug 30 09:48:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_entry): fix stack allocation failure on Debian
	  GNU/kFreeBSD.
	  Patch by Lucas Nussbaum <lucas at lucas-nussbaum dot net>.
	  [Bug #5241] [ruby-core:39147]

Tue Aug 30 09:28:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_select): rewrite by using
	  rb_thread_fd_select(). old one is EINTR unsafe.
	  Patch by Eric Wong. [Bug #5229] [ruby-core:39102]
	
	* test/-ext-/old_thread_select/test_old_thread_select.rb:
	  a testcase for rb_thread_select().
	* ext/-test-/old_thread_select/old_thread_select.c: ditto.
	* ext/-test-/old_thread_select/depend: ditto.
	* ext/-test-/old_thread_select/extconf.rb: ditto.

Tue Aug 30 09:08:22 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: fix a build failure on GNU Hurd.
	  Patch by Samuel Thibault <sthibault at debian dot org>. Thank you!
	  [Bug #5250] [ruby-core:39185]

Sun Aug 29 23:22:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* test/ruby/test_numeric.rb (test_num2long): modify a test agaist the
	  change by r33108.

Sun Aug 29 09:58:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (bit_coerce): A Fixnum and a Bignum are only permitted for
	 bitwise arithmetic with a Fixnum.  #1792

	* test/ruby/test_fixnum.rb: add tests for the above change.
