@@ -1,3 +1,8 @@
+Tue Aug 30 22:34:45 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
+
+	* test/dl/test_callback.rb (test_callback_with_string): prevents
+	  temporary string from GC.
+
 Tue Aug 30 22:25:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* vm_insnhelper.c (vm_call_cfunc): revert r33112.  RB_GC_GUARD macro
